selfhost/tests/neg/binop.ail
// EXPECT: operator * on str and i64
x := "a"
y := x * 2
println(y)
